commit numero dos

--- a/index.html
+++ b/index.html
@@ -49,12 +49,11 @@
         <div class="container">
             <div class="ms-auto col-12 col-md-7 ">
                 <h1 class="display-1 fw-bold my-5">
-                    VIVAN LAS LONGANIZAS <br> del fin del mundo
+                    Vivan los choripanes <br> y aguante el 18
                 </h1>
                 <p class="my-5">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, accusamus iusto quibusdam
-                    dignissimos labore sequi. Cupiditate reiciendis eius dolore, illum adipisci harum voluptas iste
-                    mollitia inventore provident labore voluptatum nemo.
+                    Opino que el 18 de septiembre debería ser eterno, entonces, propongo que se contacten
+                    conmigo para hacer una fiesta.
                 </p>
                 <div class="mb-5 pb-5">
                     <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
